--- a/ux.html
+++ b/ux.html
@@ -97,7 +97,7 @@
 <p><span class="badge badge-light">Tokyo Tokyo</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351621-ui-ux-designer'>Lecle Vietnam UI/UX Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351621-ui-ux-designer'>Lecle Vietnam UI/UX Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -110,7 +110,7 @@
 <p>Jul 18, 2019 ... Project Manager, UX Writing (Contract). San Francisco, CA. Responsibilities: 
 Provides project management expertise for highly complex creative projects,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/efront/41b6338e-ed98-4753-9e76-ad8f288eb953'>eFront - UX Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/efront/41b6338e-ed98-4753-9e76-ad8f288eb953'>eFront - UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -122,7 +122,7 @@ Provides project management expertise for highly complex creative projects,?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gowago.join.com/jobs/257214-ux-researcher-designer'>Job @ GOWAGO (Z?rich): UX Researcher/Designer | JOIN</a></h5> 
+<h5><a href='https://gowago.join.com/jobs/257214-ux-researcher-designer'>Job @ GOWAGO (Z?rich): UX Researcher/Designer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... GOWAGO AG has a job opening for UX Researcher/Designer in Z?rich (
 published: 16.07.2019). Apply now or check the other available jobs.</p>
@@ -301,7 +301,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://skylight.workable.com/j/03758ED8E6'>Skylight - Jobs: UX Designer - Apply online</a></h5> 
+<h5><a href='https://skylight.workable.com/j/03758ED8E6'>Skylight - Jobs: UX Designer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -335,7 +335,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692161562-ux-ui-designer'>ShopUp UX/UI Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692161562-ux-ui-designer'>ShopUp UX/UI Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dhaka, Bangladesh</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -355,7 +355,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/clearpoint/job/sfyo6tq94fsmsfaeb5deuta11e/User-Experience-UX-Architect-Washington-DC'>UX Architect | My Crelate Portal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/clearpoint/job/sfyo6tq94fsmsfaeb5deuta11e/User-Experience-UX-Architect-Washington-DC'>UX Architect | My Crelate Portal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -378,7 +378,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p>1 day ago ... Are interested in data mining, analytics, and/or machine learning. We're looking 
 for candidates with solid technical foundations and a desire to continue learning.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Numberly/743999692103855-alternance-stage-administrateur-trice-systemes-gnu-linux'>Numberly Alternance/Stage Administrateur(trice) Syst?mes GNU/LINUX | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Numberly/743999692103855-alternance-stage-administrateur-trice-systemes-gnu-linux'>Numberly Alternance/Stage Administrateur(trice) Syst?mes GNU/LINUX | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -432,15 +432,15 @@ or check?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qwnaVfwI&k=Job&j=oXBP9fwg&__jvst=Employee+Referral&__jvsd=spq9hhw1&__jvsc=Twitter&bid=nDjCPKwC'>Reltio Careers - UI UX Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qwnaVfwI&k=Job&j=oXBP9fwg&__jvst=Employee+Referral&__jvsd=spq9hhw1&__jvsc=Twitter&bid=nDjCPKwC'>Reltio Careers - UI UX Designer</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/tenable-network-security/job/olVzafwJ'>Tenable Careers - Senior UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tenable-network-security/job/olVzafwJ'>Tenable Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/whyhotel/b41ebf59-3213-4ed6-8d6a-53b20c4ee2b4'>WhyHotel - UX Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/whyhotel/b41ebf59-3213-4ed6-8d6a-53b20c4ee2b4'>WhyHotel - UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
