--- a/deep-learning.html
+++ b/deep-learning.html
@@ -67,7 +67,7 @@
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://plumerai.workable.com/j/E8A1CD5088'>Plumerai - Jobs: Deep Learning Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://plumerai.workable.com/j/E8A1CD5088'>Plumerai - Jobs: Deep Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -202,7 +202,7 @@ position is to create products or tools built on Artificial Intelligence...</p>
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/California---Palo-Alto/Summer-2019-Intern---Deep-Learning-Research_JR20931'>2019 Intern - Deep Learning Research</a></h5> 
+<h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/California---Palo-Alto/Summer-2019-Intern---Deep-Learning-Research_JR20931'>2019 Intern - Deep Learning Research</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>15 hours ago ... deep learning, - machine learning, - natural language processing, - computer 
 vision, or - reinforcement learning. Applied to, for example: text categorization, 
@@ -216,7 +216,7 @@ text?...</p>
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
-<h5><a href='https://mitre.referrals.selectminds.com/jobs/sensors-systems-engineer-with-machine-and-deep-learning-focus-6321'>Sensors Systems Engineer with Machine and Deep Learning Focus - MITRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/sensors-systems-engineer-with-machine-and-deep-learning-focus-6321'>Sensors Systems Engineer with Machine and Deep Learning Focus - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
@@ -241,7 +241,7 @@ text?...</p>
 <p>19 hours ago ... Computer Vision/Deep Learning Intern. Singapore, Singapore. Advanced 
 Engineering ? AM - AV Engineering Software - Machine Learning. Intern?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aptiv-mobility/07e59f03-eafe-425e-b385-0dcc0f858a2a'>Aptiv-Mobility - Computer Vision/Deep Learning Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/aptiv-mobility/07e59f03-eafe-425e-b385-0dcc0f858a2a'>Aptiv-Mobility - Computer Vision/Deep Learning Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... GANs & domain shift: Use Generative Adversarial Networks to overcome the 
 domain shift between simulated and real data, as well as different weather, 
@@ -293,7 +293,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-05-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999689014162-faszination-emobility-praktikum-fertigungsprozessbetreuung-e-maschine-automatisierte-prufung-eines-laserschwei-prozesses-mit-deep-learning'>Bosch Group Faszination eMobility: Praktikum Fertigungsprozessbetreuung E-Maschine: Automatisierte Pr?fung eines Laserschwei?prozesses mit Deep-Learning | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999689014162-faszination-emobility-praktikum-fertigungsprozessbetreuung-e-maschine-automatisierte-prufung-eines-laserschwei-prozesses-mit-deep-learning'>Bosch Group Faszination eMobility: Praktikum Fertigungsprozessbetreuung E-Maschine: Automatisierte Pr?fung eines Laserschwei?prozesses mit Deep-Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-29</p>
 <hr/>
@@ -315,7 +315,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light">Hsinchu</span></p>
 <p>Posted on: 2019-05-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/skydio/290f8333-6487-4097-8b78-f9a5b313f6b8'>Skydio - Deep Learning Research Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/skydio/290f8333-6487-4097-8b78-f9a5b313f6b8'>Skydio - Deep Learning Research Engineer</a></h5> 
 <p><span class="badge badge-light">Redwood City</span></p>
 <p>Posted on: 2019-05-13</p>
 <hr/>
@@ -391,11 +391,11 @@ Project?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/oUPW7fww'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Hardware Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/oUPW7fww'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Hardware Engineer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/okRT7fwV'>Samsung Semiconductor, Inc. Careers - Deep Learning Engineer (Speech and Language Processing)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/okRT7fwV'>Samsung Semiconductor, Inc. Careers - Deep Learning Engineer (Speech and Language Processing)</a></h5> 
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
